# RAG-Agent

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
backend/: llm.py  main.py
frontend/: app.py
